# personal-notes

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: dependabot-uv-lock.yml  tests.yml
notes/2025/: 2025-11-13-integration-test-52959a.md
src/: core.py  new_note.py  sync.py
src/tests/: conftest.py  test_integration.py  test_new_note.py  test_sync.py
templates/: note_template.md
