[project]
name = "personal-notes"
version = "1.0.0"
description = "A simple, git-based personal note-taking system with automatic timestamping and syncing"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "data-castle" }
]
keywords = ["notes", "markdown", "git", "knowledge-management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
]
dependencies = [
    "gitpython>=3.1.45",
]

[project.scripts]
new-note = "src.new_note:main"
sync = "src.sync:main"

[dependency-groups]
lint = [
    "pre-commit==4.4.0",
    "ruff==0.14.5",
]
dev = [
    "pytest==9.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
exclude = [
    "src/tests",
]
